--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ fastapi==0.97.0
 uvicorn==0.22.0
 tweepy==4.14.0
 python-dotenv==1.0.0
-pydantic==1.10.9 
+pydantic==1.10.9
+# Optional: Uncomment to enable OpenAI integration
+# openai==1.3.5 
